--- a/app/src/main/res/layout/row_warning_chapter.xml
+++ b/app/src/main/res/layout/row_warning_chapter.xml
@@ -2,8 +2,8 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="90dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginBottom="5dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="5dp"
     app:cardElevation="0dp"
@@ -23,31 +23,17 @@
             android:maxLines="1"/>
 
         <TextView
-            android:id="@+id/authorTv"
-            android:layout_width="250dp"
+            android:id="@+id/chapterTv"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/TextAppearance.MaterialComponents.Caption"
-            android:text="Tác giả"
+            android:text="Tên chương truyện"
+            android:textColor="@color/red"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="5dp"
             android:layout_below="@id/bookNameTv"
             android:layout_alignParentLeft="true"
             android:maxLines="1"/>
 
-        <TextView
-            android:id="@+id/priceTv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="@style/TextAppearance.MaterialComponents.Caption"
-            android:text="0"
-            android:textAlignment="textEnd"
-            android:layout_toEndOf="@id/authorTv"
-            android:layout_marginTop="1dp"
-            android:layout_marginLeft="20dp"
-            android:textSize="20dp"
-            android:drawableEnd="@drawable/ic_point_gold"
-            android:layout_below="@id/bookNameTv"
-            android:maxLines="1"/>
 
         <TextView
             android:id="@+id/categoryTv"
@@ -61,11 +47,11 @@
             android:maxLines="1"/>
 
         <TextView
-            android:id="@+id/dateTv"
+            android:id="@+id/authorTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/TextAppearance.MaterialComponents.Caption"
-            android:text="dd/MM/yyyy"
+            android:text="tác giả"
             android:layout_marginLeft="5dp"
             android:layout_alignParentBottom="true"
             android:maxLines="1"/>
