--- a/app/src/main/res/layout/activity_dashboard_admin.xml
+++ b/app/src/main/res/layout/activity_dashboard_admin.xml
@@ -39,12 +39,12 @@
             android:src="@drawable/ic_logout_white"
             android:layout_alignParentStart="true"
             android:layout_marginTop="50dp"
-            android:layout_marginStart="10dp"
+
             android:background="@android:color/transparent"/>
 
         <TextView
             android:id="@+id/manageBookTv"
-            android:layout_width="60dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/subTitileTv"
             android:layout_toEndOf="@id/manageWarningTv"
@@ -58,23 +58,30 @@
 
         <TextView
             android:id="@+id/manageWarningTv"
-            android:layout_width="80dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/subTitileTv"
-            android:layout_toEndOf="@id/centerTV"
+            android:layout_toEndOf="@id/manageUserTV"
             android:layout_marginTop="5dp"
-            android:layout_marginEnd="20dp"
+            android:layout_marginEnd="15dp"
             android:text="Vi phạm"
             android:textStyle="bold"
             android:textSize="14dp"
             android:textColor="@color/white"/>
 
         <TextView
-            android:id="@+id/centerTV"
-            android:layout_width="50dp"
+            android:id="@+id/manageUserTV"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
             android:layout_below="@id/subTitileTv"
-            android:layout_centerHorizontal="true"/>
+            android:layout_centerHorizontal="true"
+            android:text="Người dùng"
+            android:textStyle="bold"
+            android:textSize="14dp"
+            android:textColor="@color/white"/>
 
         <TextView
             android:id="@+id/manageStatTv"
@@ -82,7 +89,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/subTitileTv"
             android:layout_marginTop="5dp"
-            android:layout_toStartOf="@id/centerTV"
+            android:layout_toStartOf="@id/manageUserTV"
             android:text="Thống kê"
             android:textColor="@color/white"
             android:textSize="14dp"
@@ -90,7 +97,7 @@
 
         <TextView
             android:id="@+id/manageRequestTv"
-            android:layout_width="60dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/subTitileTv"
             android:layout_marginTop="5dp"
