--- a/app/src/main/res/layout/activity_manage_user.xml
+++ b/app/src/main/res/layout/activity_manage_user.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/back01"
-    tools:context=".activity.DashboardAdminActivity">
+    tools:context=".activity.ManageUserActivity">
 
     <RelativeLayout
         android:id="@+id/toolbarRl"
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="40dp"
-            android:text="Bảng điểu khiển quản lý sách"
+            android:text="Bảng điểu khiển quản lý người dùng"
             android:textStyle="bold"
             android:textColor="@color/white"/>
 
@@ -60,7 +60,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/subTitileTv"
-            android:layout_toEndOf="@id/manageUserTV"
+            android:layout_toEndOf="@id/manageBookTV"
             android:layout_marginEnd="15dp"
             android:layout_marginTop="5dp"
             android:text="Vi phạm"
@@ -69,7 +69,7 @@
             android:textColor="@color/white"/>
 
         <TextView
-            android:id="@+id/manageUserTV"
+            android:id="@+id/manageBookTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
@@ -77,7 +77,7 @@
             android:layout_marginEnd="15dp"
             android:layout_below="@id/subTitileTv"
             android:layout_centerHorizontal="true"
-            android:text="Người dùng"
+            android:text="Sách"
             android:textStyle="bold"
             android:textSize="14dp"
             android:textColor="@color/white"/>
@@ -88,7 +88,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/subTitileTv"
             android:layout_marginTop="5dp"
-            android:layout_toStartOf="@id/manageUserTV"
+            android:layout_toStartOf="@id/manageBookTV"
             android:text="Thống kê"
             android:textColor="@color/white"
             android:textSize="14dp"
@@ -128,7 +128,6 @@
         android:id="@+id/swipeRefresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/bottomLl"
         android:layout_below="@id/searchEt"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
@@ -136,38 +135,13 @@
         android:layout_marginBottom="10dp">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/booksRv"
+            android:id="@+id/usersRv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:listitem="@layout/row_book_admin" />
+            tools:listitem="@layout/row_user_manager" />
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
-
-    <LinearLayout
-        android:id="@+id/bottomLl"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/addBookBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Thêm  sách"
-            android:layout_weight="1"
-            android:layout_marginEnd="10dp"
-            android:background="@drawable/shape_button1"
-            android:minHeight="50dp"
-            android:textAllCaps="false"
-            android:textColor="@color/white"/>
-
-
-    </LinearLayout>
 
 </RelativeLayout>
