TuanLA_20231123_Add_User_Detail_Activity

--- a/app/src/main/res/layout/row_user_manager.xml
+++ b/app/src/main/res/layout/row_user_manager.xml
@@ -15,12 +15,11 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/avatar"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:src="@drawable/logo"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:src="@drawable/ic_launcher_background"
             app:civ_border_width="0dp"
             android:layout_marginLeft="15dp"
             android:layout_centerVertical="true"
@@ -51,11 +50,34 @@
             android:textColor="@color/black"
             android:text=""/>
 
+        <TextView
+            android:id="@+id/emailTv"
+            android:layout_toRightOf="@id/avatar"
+            android:layout_below="@+id/userIdTv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="5dp"
+            android:textSize="15dp"
+            android:textColor="@color/black"
+            android:text=""/>
 
         <TextView
             android:id="@+id/totalPointTv"
             android:layout_toRightOf="@id/avatar"
-            android:layout_below="@+id/userIdTv"
+            android:layout_below="@+id/emailTv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="5dp"
+            android:textSize="15dp"
+            android:textColor="@color/black"
+            android:text="" />
+
+        <TextView
+            android:id="@+id/statusTv"
+            android:layout_alignParentEnd="true"
+            android:layout_below="@+id/emailTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
