--- a/app/src/main/res/layout/activity_user_detail.xml
+++ b/app/src/main/res/layout/activity_user_detail.xml
@@ -47,8 +47,8 @@
             android:layout_marginTop="10dp"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="10dp"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             app:civ_border_width="0dp"
             android:layout_marginLeft="15dp"
             />
@@ -295,7 +295,7 @@
                 android:drawablePadding="10dp"
                 android:layout_marginLeft="10dp"
                 android:hint="Nhập số point thêm"
-                android:inputType="textEmailAddress"
+                android:inputType="number"
                 android:padding="10dp"
                 android:maxLines="1"
                 android:textColor="@color/black"
