--- a/app/src/main/res/layout/activity_dashboard_admin.xml
+++ b/app/src/main/res/layout/activity_dashboard_admin.xml
@@ -39,7 +39,17 @@
             android:src="@drawable/ic_logout_white"
             android:layout_alignParentStart="true"
             android:layout_marginTop="50dp"
+            android:layout_marginLeft="10dp"
+            android:background="@android:color/transparent"/>
 
+        <ImageButton
+            android:id="@+id/settingBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_setting_white"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="50dp"
+            android:layout_marginRight="15dp"
             android:background="@android:color/transparent"/>
 
         <TextView
@@ -63,7 +73,7 @@
             android:layout_below="@id/subTitileTv"
             android:layout_toEndOf="@id/manageUserTV"
             android:layout_marginTop="5dp"
-            android:layout_marginEnd="15dp"
+            android:layout_marginEnd="20dp"
             android:text="Vi phạm"
             android:textStyle="bold"
             android:textSize="14dp"
@@ -101,7 +111,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/subTitileTv"
             android:layout_marginTop="5dp"
-            android:layout_marginEnd="20dp"
+            android:layout_marginEnd="15dp"
             android:layout_toStartOf="@id/manageStatTv"
             android:text="Yêu cầu"
             android:textColor="@color/white"
