--- a/app/src/main/res/layout/layout_dialog_warning.xml
+++ b/app/src/main/res/layout/layout_dialog_warning.xml
@@ -1,6 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:background="@color/gray04">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/textViewTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Báo lỗi"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="16dp"/>
+
+    <RadioGroup
+        android:id="@+id/radioGroupPurpose"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textViewTitle"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="16dp">
+
+        <RadioButton
+            android:id="@+id/adultContent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20dp"
+            android:checked="true"
+            android:text="Nội dung người lớn" />
+
+        <RadioButton
+            android:id="@+id/hatred"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20dp"
+            android:text="Gây thù hằn" />
+
+        <RadioButton
+            android:id="@+id/personalAttack"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20dp"
+            android:text="Công kích cá nhân" />
+
+        <RadioButton
+            android:id="@+id/spam"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20dp"
+            android:text="Spam" />
+
+        <RadioButton
+            android:id="@+id/other"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20dp"
+            android:text="Các vấn đề khác" />
+
+    </RadioGroup>
+
+    <EditText
+        android:id="@+id/reportContentEt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="10dp"
+        android:layout_below="@id/radioGroupPurpose"
+        android:layout_marginTop="16dp"
+        android:hint="Nhập nội dung báo lỗi"/>
+
+    <Button
+        android:id="@+id/buttonSubmit"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/reportContentEt"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/shape_button03"
+        android:layout_marginTop="16dp"
+        android:text="Gửi"/>
+
+    <TextView
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/buttonSubmit"
+        android:textSize="12dp"
+        android:text="Các vấn đề liên quan đến vi phạm bản quyền, vui lòng email tới anhtuand19cn11@gmail.com"
+        android:textAlignment="center"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="20dp"
+        android:layout_centerHorizontal="true"
+        />
+
+</RelativeLayout>
