--- a/app/src/main/res/layout/activity_manage_request_book.xml
+++ b/app/src/main/res/layout/activity_manage_request_book.xml
@@ -41,6 +41,16 @@
             android:layout_marginStart="5dp"
             android:background="@android:color/transparent"/>
 
+        <ImageButton
+            android:id="@+id/settingBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_setting_white"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="50dp"
+            android:layout_marginRight="15dp"
+            android:background="@android:color/transparent"/>
+
         <TextView
             android:id="@+id/manageCategoryTv"
             android:layout_width="wrap_content"
